# NauEnginePublic

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: NauCommon.cmake  NauModule.cmake
cmake/defaults/: UsdPackages.cmake
cmake/for_build/: CMakeLists.txt  NauEngineSDK.cmake
cmake/platformSpec/: NauMicrosoft.cmake
engine/3rdparty_libs/: CMakeLists.txt
engine/3rdparty_libs/JoltPhysics/: CMakeLists.txt
engine/3rdparty_libs/fmt/: CMakeLists.txt
engine/3rdparty_libs/gainput/lib/: CMakeLists.txt
engine/3rdparty_libs/libpng-libpng16/: CMakeLists.txt
engine/3rdparty_libs/lua/: CMakeLists.txt
engine/3rdparty_libs/miniaudio/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/animation/offline/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/animation/offline/gltf/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/animation/offline/tools/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/animation/runtime/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/base/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/geometry/runtime/: CMakeLists.txt
engine/3rdparty_libs/ozz/src/options/: CMakeLists.txt
engine/3rdparty_libs/stb/: CMakeLists.txt
engine/3rdparty_libs/tinydds/: CMakeLists.txt
engine/3rdparty_libs/tinygltf/: CMakeLists.txt
engine/core/kernel/include/nau/math/: dag_bounds3.h
engine/core/kernel/include/nau/threading/: thread_local_value.h
engine/core/kernel/include/nau/version/: engine_version.h
engine/core/modules/dagorECS/include/daECS/core/: entityManager.h
engine/core/modules/physics/: CMakeLists.txt
engine/core/modules/platform_app/src/platform/windows/: windows_window_manager_impl.cpp
engine/core/modules/scene/src/: CMakeLists.txt
engine/core/modules/scripts_lua/lua_toolkit/src/: CMakeLists.txt
engine/core/modules/ui/cocos2d-x/cocos/2d/: CCDrawNode.cpp
engine/core/modules/ui/cocos2d-x/cocos/base/: ZipUtils.cpp  ccCArray.cpp
engine/core/modules/ui/cocos2d-x/cocos/renderer/: CCRenderer.cpp
engine/core/modules/ui/cocos2d-x/cocos/renderer/backend/: Types.cpp
engine/core/modules/vfx/src/components/: vfx_component.cpp
project_templates/empty/: CMakeLists.txt  CMakePresets.json
samples/physics/: main.cpp  sample_component.cpp  sample_component.h
samples/sample_common/include/nau/samples/components/: camera_control.h
samples/sample_common/src/components/: camera_control.cpp
samples/sceneBase/: CMakeLists.txt
tools/asset_pack_tool/: CMakeLists.txt
tools/asset_tools/tool/: CMakeLists.txt
tools/build_tools/cmd/: CMakeLists.txt
tools/build_tools/tool/: CMakeLists.txt
tools/material_creation_tool/: CMakeLists.txt
tools/project_tools/cmd/: CMakeLists.txt
tools/project_tools/tool/: CMakeLists.txt
tools/shared/: CMakeLists.txt
tools/usd_tools/plugins/anim_schema/: CMakeLists.txt
tools/usd_tools/plugins/asset_metadata/: CMakeLists.txt
tools/usd_tools/plugins/audio_schema/: CMakeLists.txt
tools/usd_tools/plugins/component_schema/: CMakeLists.txt
tools/usd_tools/plugins/gui_schema/: CMakeLists.txt
tools/usd_tools/plugins/input_schema/: CMakeLists.txt
tools/usd_tools/plugins/nau_usd_format/: CMakeLists.txt
tools/usd_tools/plugins/physics_schema/: CMakeLists.txt
tools/usd_tools/plugins/usd_translator_wrapper/: CMakeLists.txt
tools/usd_tools/plugins/usd_uid_lookup/: CMakeLists.txt
tools/usd_tools/plugins/vfx_schema/: CMakeLists.txt
tools/usd_tools/usd_helpers/: CMakeLists.txt
tools/usd_tools/usd_meta_tools/: CMakeLists.txt
tools/usd_tools/usd_proxy/: CMakeLists.txt
tools/usd_tools/usd_translator/: CMakeLists.txt
